--- a/nodepool/nodepool.yaml
+++ b/nodepool/nodepool.yaml
@@ -47,10 +47,10 @@ diskimages:
 providers:
   - name: local_01
 #TODO: Update the provider username, password, and authurl
-    username: '<%= provider_username %>'
-    password: '<%= provider_password %>'
-    auth-url: 'http://<openstack cloud>:5000/v2.0'
-    project-name: 'admin'
+    username: 'peregrine'
+    password: 'password'
+    auth-url: 'http://10.214.178.11:5000/v2.0'
+    project-name: 'CI'
     max-servers: 2
     images:
       - name: dpc
